// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Friends only 1`] = `
<main
  class="flex w-full h-screen"
  style="height: 100vh;"
>
  <section
    class="flex-1"
  />
   
  <aside
    class="s-2iawX3uhhnz1"
  >
    <section
      aria-expanded="true"
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-1"
      style="width: 25vw; transition: width var(--short);"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="s-vqhOCvFa7LzI"
          role="tablist"
          style="--corner1: url(#clip-path-10010); --corner2: url(#clip-path-10020);"
        >
          <li
            class="bg s-vqhOCvFa7LzI"
          />
           
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  people_alt
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-1"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
         
        <svg
          class="s-vqhOCvFa7LzI"
          style="width: 0px; height: 0px;"
        >
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10010"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10020"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
        </svg>
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-2iawX3uhhnz1"
        >
          <div
            class="peers s-2iawX3uhhnz1 hidden"
          >
            <div
              class="s-9CzX_ZtBT-9N"
              style="--rows: 1; --columns: 1;"
            >
               
            </div>
            <!--&lt;AvatarGrid&gt;-->
             
            <legend
              class="s-uuldoZl5F298"
            >
               
            </legend>
            <!--&lt;VideoCommands&gt;-->
             
          </div>
           
           
          <section
            aria-roledescription="friend-list"
            class="s-XLQf75fI0H0o"
          >
            <h3
              class="s-XLQf75fI0H0o"
            >
              Vos ami·e·s
            </h3>
             
            <div
              class="s-XLQf75fI0H0o"
            >
              <span
                aria-haspopup="menu"
                class="wrapper s-JM3fRWrV7jJU"
              >
                <fieldset
                  class="s-Fe6WNbR-55zp"
                >
                  <legend
                    class="s-Fe6WNbR-55zp"
                  >
                    Pseudo
                  </legend>
                   
                  <input
                    class="s-Fe6WNbR-55zp"
                    type="text"
                  />
                </fieldset>
                <!--&lt;Input&gt;-->
                 
                
                <!--&lt;Menu&gt;-->
              </span>
              <!--&lt;Typeahead&gt;-->
               
              <button
                class="s-NMyTiX1zi6rz"
                disabled=""
              >
                <div
                  class="s-NMyTiX1zi6rz"
                >
                  <span
                    class="material-icons s-NMyTiX1zi6rz"
                  >
                    person_add_alt_1
                  </span>
                  
                  
                </div>
                 
              </button>
              <!--&lt;Button&gt;-->
            </div>
             
             
            <ol
              class="s-XLQf75fI0H0o"
              role="listbox"
            >
              <li
                aria-checked="false"
                aria-selected="false"
                class="s-XLQf75fI0H0o"
                role="option"
                tabindex="-1"
              >
                <figure
                  class="s-engCJu8q-fNe"
                  style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Fernand Naudin"
                    class="s-engCJu8q-fNe"
                    height="40"
                    referrerpolicy="no-referrer"
                    width="40"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    FN
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Fernand Naudin
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        delete
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                aria-checked="false"
                aria-selected="false"
                class="s-XLQf75fI0H0o isRequest"
                role="option"
                tabindex="-1"
              >
                <figure
                  class="s-engCJu8q-fNe"
                  style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Paul Wolfoni"
                    class="s-engCJu8q-fNe hasImage"
                    height="40"
                    referrerpolicy="no-referrer"
                    src="/tests/fixtures/avatar.png"
                    width="40"
                  />
                   
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Paul Wolfoni souhaite rejoindre vos ami·e·s
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="primary s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        check
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                   
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        clear
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                aria-checked="false"
                aria-selected="false"
                class="s-XLQf75fI0H0o isProposal"
                role="option"
                tabindex="-1"
              >
                <figure
                  class="s-engCJu8q-fNe"
                  style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Raoul Wolfoni"
                    class="s-engCJu8q-fNe"
                    height="40"
                    referrerpolicy="no-referrer"
                    width="40"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    RW
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Demande envoyée à Raoul Wolfoni
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        delete
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                aria-checked="false"
                aria-selected="false"
                class="s-XLQf75fI0H0o"
                role="option"
                tabindex="-1"
              >
                <figure
                  class="s-engCJu8q-fNe"
                  style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="40"
                    referrerpolicy="no-referrer"
                    width="40"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    MF
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Maître Follas
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        delete
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                aria-checked="false"
                aria-selected="false"
                class="s-XLQf75fI0H0o"
                role="option"
                tabindex="-1"
              >
                <figure
                  class="s-engCJu8q-fNe"
                  style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="40"
                    referrerpolicy="no-referrer"
                    width="40"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    P
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Pascal
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        delete
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
            </ol>
             
             
          </section>
          <!--&lt;FriendList&gt;-->
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Container&gt;-->
</main>
`;

exports[`Lobby 1`] = `
<main
  class="flex w-full h-screen"
  style="height: 100vh;"
>
  <section
    class="flex-1"
  />
   
  <aside
    class="s-2iawX3uhhnz1"
  >
    <section
      aria-expanded="true"
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-2"
      style="width: 25vw; transition: width var(--short);"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="s-vqhOCvFa7LzI"
          role="tablist"
          style="--corner1: url(#clip-path-10030); --corner2: url(#clip-path-10040);"
        >
          <li
            class="bg s-vqhOCvFa7LzI"
          />
           
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  contacts
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F4
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  question_answer
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F5
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI active"
          >
            <button
              aria-selected="true"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  people_alt
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-2"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
         
        <svg
          class="s-vqhOCvFa7LzI"
          style="width: 0px; height: 0px;"
        >
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10030"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10040"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
        </svg>
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-2iawX3uhhnz1"
        >
          <div
            class="peers s-2iawX3uhhnz1 hidden"
          >
            <div
              class="s-9CzX_ZtBT-9N"
              style="--rows: 1; --columns: 1;"
            >
               
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Maître Follas
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Pascal
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
            </div>
            <!--&lt;AvatarGrid&gt;-->
             
            <legend
              class="s-uuldoZl5F298"
            >
               
            </legend>
            <!--&lt;VideoCommands&gt;-->
             
            <div
              class="lobby-instructions s-2iawX3uhhnz1"
            >
              Pour transformer ce salon en jeu, choisissez un de vos jeux disponibles.
            </div>
          </div>
           
          <section
            aria-roledescription="player-list"
            class="s-XLQf75fI0H0o"
          >
            <h3
              class="s-XLQf75fI0H0o"
            >
              Participant·e·s
            </h3>
             
            <ol
              class="s-XLQf75fI0H0o"
            >
              <li
                class="isPlayer s-XLQf75fI0H0o"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 40px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="40"
                    referrerpolicy="no-referrer"
                    width="40"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    MF
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Maître Follas
                </span>
                 
                 
              </li>
              <li
                class="isPlayer s-XLQf75fI0H0o"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 40px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="40"
                    referrerpolicy="no-referrer"
                    width="40"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    P
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Pascal
                </span>
                 
                 
              </li>
            </ol>
          </section>
           
          <section
            aria-roledescription="friend-list"
            class="s-XLQf75fI0H0o"
          >
            <h3
              class="s-XLQf75fI0H0o"
            >
              Vos ami·e·s
            </h3>
             
            <div
              class="s-XLQf75fI0H0o"
            >
              <span
                aria-haspopup="menu"
                class="wrapper s-JM3fRWrV7jJU"
              >
                <fieldset
                  class="s-Fe6WNbR-55zp"
                >
                  <legend
                    class="s-Fe6WNbR-55zp"
                  >
                    Pseudo
                  </legend>
                   
                  <input
                    class="s-Fe6WNbR-55zp"
                    type="text"
                  />
                </fieldset>
                <!--&lt;Input&gt;-->
                 
                
                <!--&lt;Menu&gt;-->
              </span>
              <!--&lt;Typeahead&gt;-->
               
              <button
                class="s-NMyTiX1zi6rz"
                disabled=""
              >
                <div
                  class="s-NMyTiX1zi6rz"
                >
                  <span
                    class="material-icons s-NMyTiX1zi6rz"
                  >
                    person_add_alt_1
                  </span>
                  
                  
                </div>
                 
              </button>
              <!--&lt;Button&gt;-->
            </div>
             
             
            <ol
              class="s-XLQf75fI0H0o"
              role="listbox"
            >
              <li
                aria-checked="false"
                aria-selected="false"
                class="s-XLQf75fI0H0o isRequest"
                role="option"
                tabindex="-1"
              >
                <figure
                  class="s-engCJu8q-fNe"
                  style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Paul Wolfoni"
                    class="s-engCJu8q-fNe hasImage"
                    height="40"
                    referrerpolicy="no-referrer"
                    src="/tests/fixtures/avatar.png"
                    width="40"
                  />
                   
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Paul Wolfoni souhaite rejoindre vos ami·e·s
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="primary s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        check
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                   
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        clear
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                aria-checked="false"
                aria-selected="true"
                class="s-XLQf75fI0H0o isProposal"
                role="option"
                tabindex="0"
              >
                <figure
                  class="s-engCJu8q-fNe"
                  style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Raoul Wolfoni"
                    class="s-engCJu8q-fNe"
                    height="40"
                    referrerpolicy="no-referrer"
                    width="40"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    RW
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-XLQf75fI0H0o"
                  role="term"
                >
                  Demande envoyée à Raoul Wolfoni
                </span>
                 
                <span
                  class="buttons s-XLQf75fI0H0o"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        delete
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
            </ol>
             
            <span
              class="invite s-XLQf75fI0H0o"
            >
              <button
                class="has-text s-NMyTiX1zi6rz"
                disabled=""
              >
                <div
                  class="s-NMyTiX1zi6rz"
                >
                  <span
                    class="material-icons s-NMyTiX1zi6rz"
                  >
                    gamepad
                  </span>
                  
                  <span
                    class="text s-NMyTiX1zi6rz"
                  >
                    Inviter dans le salon
                  </span>
                  
                </div>
                 
              </button>
              <!--&lt;Button&gt;-->
            </span>
             
          </section>
          <!--&lt;FriendList&gt;-->
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Container&gt;-->
</main>
`;

exports[`Multiple connected 1`] = `
<main
  class="flex w-full h-screen"
  style="height: 100vh;"
>
  <section
    class="flex-1"
  >
    <button
      class="s-NMyTiX1zi6rz"
    >
      <div
        class="s-NMyTiX1zi6rz"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          add
        </span>
        
        
      </div>
       
    </button>
    <!--&lt;Button&gt;-->
     
    <button
      class="s-NMyTiX1zi6rz"
    >
      <div
        class="s-NMyTiX1zi6rz"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          remove
        </span>
        
        
      </div>
       
    </button>
    <!--&lt;Button&gt;-->
  </section>
   
  <aside
    class="s-2iawX3uhhnz1"
  >
    <section
      aria-expanded="true"
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-5"
      style="width: 25vw; transition: width var(--short);"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="s-vqhOCvFa7LzI"
          role="tablist"
          style="--corner1: url(#clip-path-10090); --corner2: url(#clip-path-10100);"
        >
          <li
            class="bg s-vqhOCvFa7LzI"
          />
           
          <li
            class="s-vqhOCvFa7LzI active"
          >
            <button
              aria-selected="true"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  contacts
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F4
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  question_answer
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F5
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  auto_stories
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F3
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  people_alt
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  help
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F1
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-5"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
         
        <svg
          class="s-vqhOCvFa7LzI"
          style="width: 0px; height: 0px;"
        >
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10090"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10100"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
        </svg>
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-2iawX3uhhnz1"
        >
          <div
            class="peers s-2iawX3uhhnz1"
          >
            <div
              class="s-9CzX_ZtBT-9N"
              style="--rows: 1; --columns: 1;"
            >
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #9c3096; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Fernand Naudin"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Fernand Naudin
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
               
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Maître Follas
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Pascal
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
            </div>
            <!--&lt;AvatarGrid&gt;-->
             
            <legend
              class="s-uuldoZl5F298"
            >
               
            </legend>
            <!--&lt;VideoCommands&gt;-->
             
          </div>
           
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Container&gt;-->
</main>
`;

exports[`No peers 1`] = `
<main
  class="flex w-full h-screen"
  style="height: 100vh;"
>
  <section
    class="flex-1"
  />
   
  <aside
    class="s-2iawX3uhhnz1"
  >
    <section
      aria-expanded="true"
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-3"
      style="width: 25vw; transition: width var(--short);"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="s-vqhOCvFa7LzI"
          role="tablist"
          style="--corner1: url(#clip-path-10050); --corner2: url(#clip-path-10060);"
        >
          <li
            class="bg s-vqhOCvFa7LzI"
          />
           
          <li
            class="s-vqhOCvFa7LzI active"
          >
            <button
              aria-selected="true"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  auto_stories
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F3
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  people_alt
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  help
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F1
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-3"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
         
        <svg
          class="s-vqhOCvFa7LzI"
          style="width: 0px; height: 0px;"
        >
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10050"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10060"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
        </svg>
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-2iawX3uhhnz1"
        >
          <div
            class="peers s-2iawX3uhhnz1 hidden"
          >
            <div
              class="s-9CzX_ZtBT-9N"
              style="--rows: 1; --columns: 1;"
            >
               
            </div>
            <!--&lt;AvatarGrid&gt;-->
             
            <legend
              class="s-uuldoZl5F298"
            >
               
            </legend>
            <!--&lt;VideoCommands&gt;-->
             
          </div>
           
          <section
            class="s-HS2qv-2i033g"
          >
            <menu
              class="s-HS2qv-2i033g"
            >
              <button
                class="s-NMyTiX1zi6rz"
                disabled=""
              >
                <div
                  class="s-NMyTiX1zi6rz"
                >
                  <span
                    class="material-icons s-NMyTiX1zi6rz"
                  >
                    navigate_before
                  </span>
                  
                  
                </div>
                 
              </button>
              <!--&lt;Button&gt;-->
               
              1
              /
              4
               
              <button
                class="s-NMyTiX1zi6rz"
              >
                <div
                  class="s-NMyTiX1zi6rz"
                >
                  <span
                    class="material-icons s-NMyTiX1zi6rz"
                  >
                    navigate_next
                  </span>
                  
                  
                </div>
                 
              </button>
              <!--&lt;Button&gt;-->
            </menu>
             
            <div
              class="image-container s-HS2qv-2i033g"
            >
              <img
                alt="Livre de règles, page 1"
                class="s-HS2qv-2i033g"
                src="http://localhost:3001/games/splendor/rules/1.webp"
              />
            </div>
          </section>
          <!--&lt;RuleViewer&gt;-->
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Container&gt;-->
</main>
`;

exports[`No peers, no rules book 1`] = `undefined`;

exports[`Single connected 1`] = `
<main
  class="flex w-full h-screen"
  style="height: 100vh;"
>
  <section
    class="flex-1"
  />
   
  <aside
    class="s-2iawX3uhhnz1"
  >
    <section
      aria-expanded="true"
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-4"
      style="width: 25vw; transition: width var(--short);"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="s-vqhOCvFa7LzI"
          role="tablist"
          style="--corner1: url(#clip-path-10070); --corner2: url(#clip-path-10080);"
        >
          <li
            class="bg s-vqhOCvFa7LzI"
          />
           
          <li
            class="s-vqhOCvFa7LzI active"
          >
            <button
              aria-selected="true"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  contacts
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F4
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  question_answer
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F5
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  auto_stories
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F3
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  people_alt
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  help
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F1
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-4"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
         
        <svg
          class="s-vqhOCvFa7LzI"
          style="width: 0px; height: 0px;"
        >
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10070"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10080"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
        </svg>
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-2iawX3uhhnz1"
        >
          <div
            class="peers s-2iawX3uhhnz1"
          >
            <div
              class="s-9CzX_ZtBT-9N"
              style="--rows: 1; --columns: 1;"
            >
               
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Maître Follas
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Pascal
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
            </div>
            <!--&lt;AvatarGrid&gt;-->
             
            <legend
              class="s-uuldoZl5F298"
            >
               
            </legend>
            <!--&lt;VideoCommands&gt;-->
             
          </div>
           
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Container&gt;-->
</main>
`;

exports[`Single connected, no rules book, thread 1`] = `
<main
  class="flex w-full h-screen"
  style="height: 100vh;"
>
  <section
    class="flex-1"
  />
   
  <aside
    class="s-2iawX3uhhnz1"
  >
    <section
      aria-expanded="true"
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-7"
      style="width: 25vw; transition: width var(--short);"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="s-vqhOCvFa7LzI"
          role="tablist"
          style="--corner1: url(#clip-path-10130); --corner2: url(#clip-path-10140);"
        >
          <li
            class="bg s-vqhOCvFa7LzI"
          />
           
          <li
            class="s-vqhOCvFa7LzI active"
          >
            <button
              aria-selected="true"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  contacts
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F4
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  question_answer
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F5
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  people_alt
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  help
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F1
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-7"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
         
        <svg
          class="s-vqhOCvFa7LzI"
          style="width: 0px; height: 0px;"
        >
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10130"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10140"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
        </svg>
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-2iawX3uhhnz1"
        >
          <div
            class="peers s-2iawX3uhhnz1"
          >
            <div
              class="s-9CzX_ZtBT-9N"
              style="--rows: 1; --columns: 1;"
            >
               
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Maître Follas
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Pascal
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
            </div>
            <!--&lt;AvatarGrid&gt;-->
             
            <legend
              class="s-uuldoZl5F298"
            >
               
            </legend>
            <!--&lt;VideoCommands&gt;-->
             
          </div>
           
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Container&gt;-->
</main>
`;
